Committing because it's been too long since the last one :). Various UI tweaks, adjusted some responsiveness issues. My ugly mug now disappears when screen is sized below a certain point, creating cleaner responsiveness for About section. Updated fourth portfolio card to weather app.

--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,6 @@ html {
 }
 
 nav {
-  /* background-color: #38333E; */
-  /* background-color: rgba(0, 0, 0, 0) !important; */
   background-color: #5a6265;
   transition: background-color 1s ease;
   border: none;
@@ -48,20 +46,9 @@ header#top {
   background-size: cover;
   width: 100%;
   height: 100%;
-
-  /* background-image: url("images/hallaerial.jpg"); */
-  /* background-image: url("images/franklin.jpg"); */
-  /* background-image: url("images/skyline.jpg"); */
-  /* background-image: url("images/philly.jpg"); */
-  /* background-image: url("images/bfparkway.jpg"); */
-  /* background-image: url("images/arch.jpg"); */
 }
 
 #headercontent {
-  /* background-color: rgba(112,128,144, 0.5); */
-  /* background-color: rgba(0,0,0, 0.5); */
-  /* border: silver groove 3px; */
-  /* border-radius: 4px; */
   padding: 1%;
   color: white;
   margin-bottom: 15%;
@@ -105,8 +92,6 @@ h3 {
 }
 
 #about {
-  /* background-color: #38333E; */
-  /* border-top: solid 2px white; */
   background-color: #979ca2;
   height: 100%;
   display: flex;
@@ -122,7 +107,6 @@ h3 {
 
 #worktitle {
   color: #f9f8f9;
-  /* text-decoration: underline; */
 }
 .card-content {
   /* color: #4B6777 !important; */
@@ -132,11 +116,6 @@ h3 {
   height: 4rem;
 }
 
-@media (max-width: 1100px) {
-  .Container {
-    flex-direction: column;
-  }
-}
 
 
 .portimg{
@@ -174,14 +153,24 @@ h3 {
 }
 
 li.active{
-  border-left: none !important;
-  border-right: solid 2px red !important;
+  /* border-left: none !important; */
+  /* border-right: solid 2px red !important; */
 }
 
-.input-field input[type=text]:focus {
-  border-bottom: 1px solid red !important;
-  box-shadow: 0 1px 0 0 red !important;
+.input-field input:focus, .input-field textarea:focus {
+  border-bottom: 1px solid #546e7a !important;
+  box-shadow: 0 1px 0 0 #546e7a !important;
 }
+
+a:hover{
+  text-decoration: underline;
+  border-left:none !important;
+}
+
+button{
+  background-color: #546e7a !important;
+}
+
 
 label{
   color: white !important;
@@ -195,4 +184,33 @@ label{
 
 nav ul a:hover {
   background-color: rgba(0, 0, 0, 0) !important;
+}
+
+.table-of-contents a.active {
+  font-weight: 500;
+  padding-left: 18px;
+  border-bottom: 2px solid white;
+}
+
+input, textarea{
+  border-bottom: 1px solid white !important;
+}
+
+
+
+
+@media (max-width: 1100px) {
+  .Container {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 950px){
+  #aboutwrapper{
+    flex-direction: column;
+  }
+
+  #me{
+    display:none;
+  }
 }
